# RLAGS-USU

./: .gitignore  DST_SerialNum.txt~  SDK.tar  control_scripts  device_list  installedPackages_new.txt  installedPackages_old.txt  partition_list  sample_uplink  testConnect.sh
Documents/: Sun Camera Setup.odt
GoQat/: GoQat.conf  GoQat.conf.bak  GoQat.conf.watch  ccd_display.fit  log.txt
GoQatOld/: log.txt  my_watch_file
Rlags_project/: goqat-1.0.3.tar
Rlags_project/SEDI_Camera/: ChangeLog  GoQat-gtkbuilder.glade  Makefile  Makefile.in  README  aclocal.m4  config.h.in  config.status  configure  configure.ac
Rlags_project/SEDI_Camera/data/: DemoScript.sh  DemoTasks.txt  GoQat_SExtractor.pl  GoQat_SExtractor.pl.in  temps.agr  trace.agr
Rlags_project/SEDI_Camera/src/: GoQat  Makefile  Makefile.am  Makefile.in  augcam.c  ccdcam.c  ccdcam.c.bak  config.h  focus.c  focus.h  gqusb.c  gqusb.h  interface.c  interface.c.save  interface.c.save.1  interface.c.save.2  interface.c.working  loop.c  ports.h  qsi.h  qsiapi_c.cpp  serial.c  sx.c  sx.h  tasks.c  telescope.c  telescope.h  video.c
Rlags_project/SEDI_Camera2/: Makefile  README  TODO  config.status  configure.ac
Rlags_project/SEDI_Camera2/data/: DemoScript.pl  DemoScript.pl.in  DemoScript.sh.in  GoQat.conf  hfd.agr
Rlags_project/SEDI_Camera2/src/: GoQat  Makefile  Makefile.am  Makefile.in  ccd.h  ccdcam.c  config.h  debayer.c  filter.c  image.c  interface.c  interface.h  qsi.c  serial.c  sx.c
Rlags_project/Sun_Camera/demo/: Makefile  main_console.cpp
Rlags_project/Sun_Camera/include/: ASICamera.h
Rlags_project/Sun_Camera/rlags_code/: Makefile  get_star3_image  get_sun0_image  get_sun1_image  get_sun2_image  star_camera3.cpp  sun_camera0.cpp  sun_camera1.cpp  sun_camera2.cpp
Rlags_project/scripts/: getDataLock.sh  releaseDataLock.sh
Rlags_project/scripts/communication/: .gitignore  CMakeLists.txt  Makefile  get_arduino_comm_pid.sh  maintain_network.sh  pull.sh  pulled.txt  push.sh  robotserial.c  robotserial.cpp  sendFile.cpp  serial  serial_output  serial_queue.sh  uplink_in_stream
Rlags_project/scripts/communication/arduino-1.0.5/serial_test/: serial_test.ino
Rlags_project/scripts/communication/arduino-1.0.5/serial_test/hello_serial/: hello_serial.ino
Rlags_project/scripts/crons/: cron_data_protection_imu.sh  cron_imu.sh  cron_initialize_system.sh  cron_sedi.sh  cron_sun_cameras.sh
Rlags_project/scripts/drives/: mount_drives  partition_list  populate_ssd_lists  unmount_drives
Rlags_project/scripts/filter/: angles.txt  sun_center.py
Rlags_project/scripts/gps/: .gitignore  CIP_GPS.TXT  CMakeLists.txt  getGPS.cpp  getGPSData.sh  gpsStream.txt  parse.py  prep_gps_data.sh  streamInGPS.sh
Rlags_project/scripts/imu/: .gitignore  CMakeLists.txt  Makefile_backup  cc  d2  get_imu_data.sh  imu_cc.c  imu_cc.cpp  imu_d2.c  imu_d2.cpp  imu_d2.cpp_backup  move_imu_data.sh  parseCC.py
Rlags_project/scripts/imu/backup_code/: A_AR_MV_OM.c  GSA_AR_M.c  Quaternion.c  a_ar_mv_om  code_quaternion  gsa_ar_m
Rlags_project/scripts/polarizer/: .gitignore  CMakeLists.txt  PolarizerAngle.m  polarizer.cpp  polarizer.hpp  polarizer.m  polarizerAlan.cpp  updatePolarizer.sh
Rlags_project/scripts/sedi_camera/: 1_exposure_watchfile  2_exposure_watchfile  calibration_watchfile  capture.sh  capture_sedi.sh  exposure_watchfile.backup  exposure_watchfile3  initialize_goqat.sh  start_goqat.sh  temp_start.sh  update_watchfile
Rlags_project/scripts/servoControl/: servoControl.ino
Rlags_project/scripts/star_camera/: capture_star.sh  get_star3_image  get_star_image
Rlags_project/scripts/sun_cameras/: capture_sun_0.sh  capture_sun_1.sh  capture_sun_2.sh  capture_sun_all.sh  get_angle.sh  get_sun0_image  get_sun1_image  get_sun2_image  mov_to_drive.sh  new_angles.txt
Rlags_project/scripts/system_control/: assemble_housekeeping.sh  calibrate_polarizer_loop.sh  cameras.txt  cameras_old.txt  capture_cameras_loop.sh  capture_gps_loop.sh  capture_imu_loop.sh  capture_sedi_loop.sh  capture_sun_cameras.sh  capture_thermal_loop.sh  imu_execution.sh  initialize_system.sh  pull_command_loop.sh  push_bundle_loop.sh  sedi_execution.sh  stream_data_bundle.sh  stream_downlink_push.sh  stream_uplink_pull.sh  system_startup.sh
Rlags_project/scripts/thermalControl/: thermalControl.ino
Rlags_project/scripts/thermalPolarControl/: thermalPolarControl.ino
latestData/: bundle.tar.bz2  sample_sedi_cam.fit
micro_strain/: Orientation SDK Index.htm  linux_3DM-GX3-25_sample_driver.c  rlags_3dm.c.save  test.txt
micro_strain/Orientation SDK Index_files/: filelist.xml  header.htm  image001.wmz  image003.emz
micro_strain/auto_testing/: accel  compile_guide.txt  kill_accel.sh  rlags_3dm.c  script_accel.sh  test.txt
rlags/GPIO/linux/: hid-libusb.c  main.c  usbio
rlags/GPIO/pins/: Makefile  gpio_test.c  recompile.sh
rlags/Odroid-USBIO-master/: .gitignore  README  README.md
rlags/SEDI_Camera/: GoQat-gtkbuilder.glade  Makefile  Makefile.am  Makefile.in  TODO  config.status
rlags/SEDI_Camera/data/: Analyse_HFD.pl  Analyse_HFD.pl.in  goqat_vid_photom_sextractor.conf  goqat_vid_photom_sextractor.param
rlags/SEDI_Camera/src/: GoQat  Makefile  ccd.h  config.h  debayer.c  focus.h  image.c  interface.c.bak  interface.h  qsi.c
rlags/Sun_Camera/demo/: Makefile  main.cpp  test_gui
rlags/Sun_Camera/oaCapture-0.0.2-alpha/: Makefile
rlags/Sun_Camera/oacapture-0.0.2alpha/: README.txt  install-binaries.sh  instructions.txt
rlags/Sun_Camera/test_code/: Makefile  automated_pictures  main.cpp.quick_last_photo  main.cpp.quick_open  main_console.cpp  sun_picture.18.45.20.tif  (+2 more)
rlags/crons/: moving_script  moving_script.camera
rlags/downloaded_tars/: usbio.tgz
rlags/drives/: device_list  mount_drives  partition_list  populate_lists  unmount_drives
rlags/scripts/: test_console
rlags/useless_work/: woot.py  work
test_code/: libftd2xx1.1.12.tar
test_code/yaaca-master/: .gitignore  ASICamera.h  Makefile  README.md  asill.c  asill.h  make_deb.sh  pyasill.py  registers.h  test.py  yaaca.c  yaaca.c.editted  yaaca.c.save  yaaca.h  zwo.c  zwoll.c
(+300 files in other folders)
